--- a/swifty-demo/Base.lproj/Main.storyboard
+++ b/swifty-demo/Base.lproj/Main.storyboard
@@ -121,7 +121,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L1f-Ds-bO4">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L1f-Ds-bO4">
                                 <rect key="frame" x="10" y="88" width="394" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="26F-Wf-Poo"/>
